Implementada a herança para ong e usuario