@@ -2,21 +2,19 @@ package br.com.alevh.sistema_adocao_pets.model;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
+import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+
+import static jakarta.persistence.InheritanceType.JOINED;
 
 @Getter
 @Setter
@@ -24,7 +22,8 @@ import lombok.Setter;
 @EqualsAndHashCode
 @Entity
 @Table(name = "ong")
-public class Ong implements UserDetails {
+
+public class Ong extends PerfilBase implements UserDetails {
     private static final long serialVersionUID = 1L;
 
     @Id
@@ -32,26 +31,8 @@ public class Ong implements UserDetails {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long idOng;
 
-    @Column(name = "nome", nullable = false, length = 255)
-    private String nome;
-
-    @Column(name = "nome_usuario", nullable = false, unique = true, length = 255)
-    private String nomeUsuario;
-
-    @Column(name = "email", nullable = false, unique = true, length = 255)
-    private String email;
-
-    @Column(name = "senha", nullable = false, length = 255)
-    private String senha;
-
-    @Column(name = "foto_perfil", nullable = true, length = 255)
-    private String fotoPerfil;
-
     @Column(name = "endereco", nullable = false, length = 255)
     private String endereco;
-
-    @Column(name = "telefone", nullable = false, unique = true, length = 11)
-    private String telefone;
 
     @Column(name = "cnpj", nullable = false, unique = true, length = 18)
     private String cnpj;
@@ -61,16 +42,16 @@ public class Ong implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_ONG"));
+        return List.of(new SimpleGrantedAuthority("ROLE_ONG"));
     }
 
     @Override
     public String getPassword() {
-        return this.senha;
+        return this.getSenha();
     }
 
     @Override
     public String getUsername() {
-        return this.email;
+        return this.getEmail();
     }
 }
